Update Hero component layout to fix flex-wrap direction and improve section styling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,7 @@
 }
 
 .navbar {
-  @apply bg-text-600 bg-opacity-50  backdrop-blur-sm;
+  @apply bg-text-600 bg-opacity-60  backdrop-blur-sm;
 }
 
 .button {
